--- a/src/app/patient-physical-health/patient-physical-health.component.scss
+++ b/src/app/patient-physical-health/patient-physical-health.component.scss
@@ -22,6 +22,10 @@ button{
     margin-right: 1rem;
 }
 
+table{
+    width: 100%;
+}
+
 @media (max-width: 1300px){
     tr{
         display: grid;
