--- a/src/app/assigned-patient-list/assigned-patient-list.component.html
+++ b/src/app/assigned-patient-list/assigned-patient-list.component.html
@@ -2,27 +2,27 @@
     <table mat-table [dataSource]="dataSource">
   
       <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <ng-container matColumnDef="patientId">
+        <th mat-header-cell *matHeaderCellDef>Patient Id</th>
+        <td mat-cell *matCellDef="let element"> {{element.patientId}} </td>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.firstName +' '+ element.lastName}} </td>
       </ng-container>
   
       <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      <ng-container matColumnDef="report">
+        <th mat-header-cell *matHeaderCellDef> Report </th>
+        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="primary">Update Status</button> </td>
       </ng-container>
   
       <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <ng-container matColumnDef="final">
+        <th mat-header-cell *matHeaderCellDef> Final Report </th>
+        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent">Final Report</button> </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
